--- a/src/app/pages/home/services/services.component.html
+++ b/src/app/pages/home/services/services.component.html
@@ -1,1 +1,10 @@
-<p>services works!</p>
+<mat-card class="example-card">
+    <mat-card-title-group>
+      <mat-card-title>{{current.title}}</mat-card-title>
+      
+      <img mat-card-md-image src="http://localhost:8090/{{current.image}}" >
+    </mat-card-title-group>
+    <mat-card-content>
+      {{current.description}}
+    </mat-card-content>
+  </mat-card>
