--- a/src/app/pages/home/services/services.component.html
+++ b/src/app/pages/home/services/services.component.html
@@ -2,7 +2,7 @@
     <mat-card-title-group>
       <mat-card-title>{{current.title}}</mat-card-title>
       
-      <img mat-card-md-image src="http://localhost:8090/{{current.image}}" >
+      <img mat-card-md-image src="http://localhost/{{current.image}}" >
     </mat-card-title-group>
     <mat-card-content>
       {{current.description}}
