--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+
+<h3>Our Services</h3>
+<div class="home">
+    <app-services *ngFor="let x of services" [service]="x"></app-services>
+</div>
