--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,14 @@
-<p>about works!</p>
+<div id="about">
+<h2>About us</h2>
+<p>
+the About Us page is one of the first supporting pages you'll likely create for your website, regardless of the industry you're in.
+</p>
+<p>
+They may go by different labels—“About”, “Story”, “Mission”—but these types of pages generally serve the same key purpose: to be the go-to page for a brand to say, “This is who we are.”
+</p>
+<p>
+When a visitor wants to learn more about you or your business, it's the page they'll look for.
+</p>
+
+<h2>Customer Feedback</h2>
+</div>
